Kyverno/check-signature-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - image: "quay.io/ralvarez1/*"
        key: |-
          -----BEGIN PUBLIC KEY-----
          YOUR_PUBLIC_KEY
          -----END PUBLIC KEY-----
